src/tests/unary-operators/6.txt
unary-operators/6.c:2:6: error: invalid type argument of unary '*' (have 'float')
     *5.0;
      ^
